Twincpu: Split secure and non-secure test builds for multi-core building
Split secure test and non-secure test builds.
Secure test module is built during secure firmware building using
secure configuration.
Non-secure test module is built during non-secure part building
using non-secure configuration.

Change-Id: I8e84019e7c6fd065ed4aebd7b234e118a7271e6f
Signed-off-by: David Hu <david.hu@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -168,6 +168,8 @@ elseif (TFM_NS_CLIENT_IDENTIFICATION)
 	target_compile_definitions(${PROJECT_OBJ_LIB} PRIVATE TFM_NS_CLIENT_IDENTIFICATION)
 endif()
 
+add_subdirectory(${TFM_ROOT_DIR}/test ${CMAKE_BINARY_DIR}/test/non_secure_test)
+
 # For the non-swapping BL2 configuration two executables need to be built.
 # One can be executed from the primary slot flash partition and other from the
 # secondary slot. Only the linking phase is different. This function captures
