--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,6 +37,10 @@ if (NOT DEFINED TFM_LVL)
 	message(FATAL_ERROR "Incomplete build configuration: TFM_LVL is undefined. ")
 endif()
 
+if (NOT DEFINED TFM_PARTITION_AUDIT_LOG)
+	message(FATAL_ERROR "Incomplete build configuration: TFM_PARTITION_AUDIT_LOG is undefined.")
+endif()
+
 #Configure our options as needed.
 if (CORE_TEST_INTERACTIVE OR CORE_TEST_POSITIVE)
 	set(ENABLE_CORE_TESTS True)
@@ -52,6 +56,15 @@ set(ENABLE_CRYPTO_SERVICE_TESTS TRUE)
 set(ENABLE_INVERT_SERVICE_TESTS TRUE)
 set(ENABLE_ATTESTATION_SERVICE_TESTS TRUE)
 set(ENABLE_QCBOR_TESTS TRUE)
+
+if (NOT TFM_PARTITION_AUDIT_LOG)
+	set(ENABLE_AUDIT_LOGGING_SERVICE_TESTS FALSE)
+endif()
+
+if (ENABLE_AUDIT_LOGGING_SERVICE_TESTS)
+	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS ENABLE_AUDIT_LOGGING_SERVICE_TESTS)
+endif()
+
 include(${CMAKE_CURRENT_LIST_DIR}/CMakeLists.inc)
 
 if (NOT TARGET tfm_t_cose_verify)
