--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -1,7 +1,7 @@
 #! armclang --target=arm-arm-none-eabi -march=armv8-m.main -E -xc
 
 /*
- * Copyright (c) 2017-2019 Arm Limited
+ * Copyright (c) 2017-2019 Arm Limited. All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,13 @@
  * limitations under the License.
  */
 
-/*********** WARNING: This is an auto-generated file. Do not edit! ***********/
+{{utilities.donotedit_warning}}
 
 #include "region_defs.h"
 
 LR_CODE S_CODE_START {
 
-    /****  This initial section contains common code for TEE */
+    /****  This initial section contains common code for secure binary */
     ER_TFM_CODE S_CODE_START S_CODE_SIZE {
         *.o (RESET +First)
         .ANY (+RO)
@@ -36,6 +36,7 @@ LR_CODE S_CODE_START {
         dummy_boot_seed.o (+RO)
         dummy_device_id.o (+RO)
         platform_retarget_dev.o (+RO)
+        device_definition.o (+RO)
         *(SFN)
         *armlib*
     }
@@ -48,52 +49,30 @@ LR_CODE S_CODE_START {
     TFM_PSA_CODE_START +0 ALIGN 32 EMPTY 0x0 {
     }
 
-    TFM_SP_STORAGE +0 ALIGN 32 {
-        *tfm_storage* (+RO)
-        *(TFM_SP_STORAGE_ATTR_FN)
+{% for manifest in manifests %}
+    {% if manifest.manifest.type == 'PSA-ROT' %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+    {{manifest.manifest.name}} +0 ALIGN 32 {
+    {% if manifest.manifest.tfm_linker_pattern.library_list %}
+        {% for pattern in manifest.manifest.tfm_linker_pattern.library_list %}
+        {{pattern}} (+RO)
+        {% endfor %}
+    {% endif %}
+    {% if manifest.manifest.tfm_linker_pattern.object_list %}
+        {% for pattern in manifest.manifest.tfm_linker_pattern.object_list %}
+        {{pattern}} (+RO)
+        {% endfor %}
+    {% endif %}
+        *({{manifest.manifest.name}}_ATTR_FN)
     }
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
 
-    TFM_SP_AUDIT_LOG +0 ALIGN 32 {
-        *tfm_audit* (+RO)
-        *(TFM_SP_AUDIT_LOG_ATTR_FN)
-    }
-
-    TFM_SP_CRYPTO +0 ALIGN 32 {
-        *tfm_crypto* (+RO)
-        *(TFM_SP_CRYPTO_ATTR_FN)
-    }
-
-    TFM_SP_PLATFORM +0 ALIGN 32 {
-        *tfm_platform* (+RO)
-        *(TFM_SP_PLATFORM_ATTR_FN)
-    }
-
-    TFM_SP_INITIAL_ATTESTATION +0 ALIGN 32 {
-        *tfm_attest* (+RO)
-        *(TFM_SP_INITIAL_ATTESTATION_ATTR_FN)
-    }
-
-#ifdef TFM_PARTITION_TEST_SECURE_SERVICES
-    TFM_SP_SECURE_TEST_PARTITION +0 ALIGN 32 {
-        *tfm_secure_client_service.* (+RO)
-        *test_framework* (+RO)
-        *uart_stdout.* (+RO)
-        *Driver_USART.* (+RO)
-        *arm_uart_drv.* (+RO)
-        *uart_pl011_drv.* (+RO)
-        *secure_suites.* (+RO)
-        *attestation_s_interface_testsuite.* (+RO)
-        *(TFM_SP_SECURE_TEST_PARTITION_ATTR_FN)
-    }
-#endif /* TFM_PARTITION_TEST_SECURE_SERVICES */
-
-#ifdef TFM_PSA_API
-    TFM_SP_IPC_SERVICE_TEST +0 ALIGN 32 {
-        *ipc_service_test.* (+RO)
-        *(TFM_SP_IPC_SERVICE_TEST_ATTR_FN)
-    }
-#endif /* TFM_PSA_API */
-
+    {% endif %}
+{% endfor %}
     /*
      * This empty, zero long execution region is here to mark the end address
      * of PSA RoT code.
@@ -109,29 +88,32 @@ LR_CODE S_CODE_START {
     TFM_APP_CODE_START +0 ALIGN 32 EMPTY 0x0 {
     }
 
-#ifdef TFM_PARTITION_TEST_CORE
-    TFM_SP_CORE_TEST +0 ALIGN 32 {
-        *tfm_ss_core_test.* (+RO)
-        *(TFM_SP_CORE_TEST_ATTR_FN)
+{% for manifest in manifests %}
+    {% if manifest.manifest.type == 'APPLICATION-ROT' %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+    {{manifest.manifest.name}} +0 ALIGN 32 {
+    {% if manifest.manifest.tfm_linker_pattern.library_list %}
+        {% for pattern in manifest.manifest.tfm_linker_pattern.library_list %}
+        {{pattern}} (+RO)
+        {% endfor %}
+    {% endif %}
+    {% if manifest.manifest.tfm_linker_pattern.object_list %}
+        {% for pattern in manifest.manifest.tfm_linker_pattern.object_list %}
+        {{pattern}} (+RO)
+        {% endfor %}
+    {% endif %}
+        *({{manifest.manifest.name}}_ATTR_FN)
     }
-#endif /* TFM_PARTITION_TEST_CORE */
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
 
-#ifdef TFM_PARTITION_TEST_CORE
-    TFM_SP_CORE_TEST_2 +0 ALIGN 32 {
-        *tfm_ss_core_test_2.* (+RO)
-        *(TFM_SP_CORE_TEST_2_ATTR_FN)
-    }
-#endif /* TFM_PARTITION_TEST_CORE */
-
-#ifdef TFM_PSA_API
-    TFM_SP_IPC_CLIENT_TEST +0 ALIGN 32 {
-        *ipc_client_test.* (+RO)
-        *(TFM_SP_IPC_CLIENT_TEST_ATTR_FN)
-    }
-#endif /* TFM_PSA_API */
-
+    {% endif %}
+{% endfor %}
     /*
-     * This empty, zero long execution region is here to mark the start address
+     * This empty, zero long execution region is here to mark the end address
      * of APP RoT code.
      */
     TFM_APP_CODE_END +0 ALIGN 32 EMPTY 0x0 {
@@ -173,6 +155,7 @@ LR_CODE S_CODE_START {
         dummy_boot_seed.o (+RW +ZI)
         dummy_device_id.o (+RW +ZI)
         platform_retarget_dev.o (+RW +ZI)
+        device_definition.o (+RW +ZI)
     }
 
 #ifdef TFM_PSA_API
@@ -191,66 +174,32 @@ LR_CODE S_CODE_START {
     TFM_PSA_RW_STACK_START +0 ALIGN 32 EMPTY 0x0 {
     }
 
-    TFM_SP_STORAGE_DATA +0 ALIGN 32 {
-        *tfm_storage* (+RW +ZI)
+{% for manifest in manifests %}
+    {% if manifest.manifest.type == 'PSA-ROT' %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+    {{manifest.manifest.name}}_DATA +0 ALIGN 32 {
+    {% if manifest.manifest.tfm_linker_pattern.library_list %}
+        {% for pattern in manifest.manifest.tfm_linker_pattern.library_list %}
+        {{pattern}} (+RW +ZI)
+        {% endfor %}
+    {% endif %}
+    {% if manifest.manifest.tfm_linker_pattern.object_list %}
+        {% for pattern in manifest.manifest.tfm_linker_pattern.object_list %}
+        {{pattern}} (+RW +ZI)
+        {% endfor %}
+    {% endif %}
     }
 
-    TFM_SP_STORAGE_STACK +0 ALIGN 128 EMPTY 0x1800 {
+    {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
     }
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
 
-    TFM_SP_AUDIT_LOG_DATA +0 ALIGN 32 {
-        *tfm_audit* (+RW +ZI)
-    }
-
-    TFM_SP_AUDIT_LOG_STACK +0 ALIGN 128 EMPTY 0x0200 {
-    }
-
-    TFM_SP_CRYPTO_DATA +0 ALIGN 32 {
-        *tfm_crypto* (+RW +ZI)
-    }
-
-    TFM_SP_CRYPTO_STACK +0 ALIGN 128 EMPTY 0x2000 {
-    }
-
-    TFM_SP_PLATFORM_DATA +0 ALIGN 32 {
-        *tfm_platform* (+RW +ZI)
-    }
-
-    TFM_SP_PLATFORM_STACK +0 ALIGN 128 EMPTY 0x0400 {
-    }
-
-    TFM_SP_INITIAL_ATTESTATION_DATA +0 ALIGN 32 {
-        *tfm_attest* (+RW +ZI)
-    }
-
-    TFM_SP_INITIAL_ATTESTATION_STACK +0 ALIGN 128 EMPTY 0x0A00 {
-    }
-
-#ifdef TFM_PARTITION_TEST_SECURE_SERVICES
-    TFM_SP_SECURE_TEST_PARTITION_DATA +0 ALIGN 32 {
-        *tfm_secure_client_service.* (+RW +ZI)
-        *test_framework* (+RW +ZI)
-        *uart_stdout.* (+RW +ZI)
-        *Driver_USART.* (+RW +ZI)
-        *arm_uart_drv.* (+RW +ZI)
-        *uart_pl011_drv.* (+RW +ZI)
-        *secure_suites.* (+RW +ZI)
-        *attestation_s_interface_testsuite.* (+RW +ZI)
-    }
-
-    TFM_SP_SECURE_TEST_PARTITION_STACK +0 ALIGN 128 EMPTY 0x0C00 {
-    }
-#endif /* TFM_PARTITION_TEST_SECURE_SERVICES */
-
-#ifdef TFM_PSA_API
-    TFM_SP_IPC_SERVICE_TEST_DATA +0 ALIGN 32 {
-        *ipc_service_test.* (+RW +ZI)
-    }
-
-    TFM_SP_IPC_SERVICE_TEST_STACK +0 ALIGN 128 EMPTY 0x0200 {
-    }
-#endif /* TFM_PSA_API */
-
+    {% endif %}
+{% endfor %}
     /*
      * This empty, zero long execution region is here to mark the end address
      * of PSA RoT RW and Stack.
@@ -266,33 +215,32 @@ LR_CODE S_CODE_START {
     TFM_APP_RW_STACK_START +0 ALIGN 32 EMPTY 0x0 {
     }
 
-#ifdef TFM_PARTITION_TEST_CORE
-    TFM_SP_CORE_TEST_DATA +0 ALIGN 32 {
-        *tfm_ss_core_test.* (+RW +ZI)
+{% for manifest in manifests %}
+    {% if manifest.manifest.type == 'APPLICATION-ROT' %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+    {{manifest.manifest.name}}_DATA +0 ALIGN 32 {
+    {% if manifest.manifest.tfm_linker_pattern.library_list %}
+        {% for pattern in manifest.manifest.tfm_linker_pattern.library_list %}
+        {{pattern}} (+RW +ZI)
+        {% endfor %}
+    {% endif %}
+    {% if manifest.manifest.tfm_linker_pattern.object_list %}
+        {% for pattern in manifest.manifest.tfm_linker_pattern.object_list %}
+        {{pattern}} (+RW +ZI)
+        {% endfor %}
+    {% endif %}
     }
 
-    TFM_SP_CORE_TEST_STACK +0 ALIGN 128 EMPTY 0x0300 {
+    {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
     }
-#endif /* TFM_PARTITION_TEST_CORE */
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
 
-#ifdef TFM_PARTITION_TEST_CORE
-    TFM_SP_CORE_TEST_2_DATA +0 ALIGN 32 {
-        *tfm_ss_core_test_2.* (+RW +ZI)
-    }
-
-    TFM_SP_CORE_TEST_2_STACK +0 ALIGN 128 EMPTY 0x0200 {
-    }
-#endif /* TFM_PARTITION_TEST_CORE */
-
-#ifdef TFM_PSA_API
-    TFM_SP_IPC_CLIENT_TEST_DATA +0 ALIGN 32 {
-        *ipc_client_test.* (+RW +ZI)
-    }
-
-    TFM_SP_IPC_CLIENT_TEST_STACK +0 ALIGN 128 EMPTY 0x0200 {
-    }
-#endif /* TFM_PSA_API */
-
+    {% endif %}
+{% endfor %}
     /*
      * This empty, zero long execution region is here to mark the end address
      * of APP RoT RW and Stack.
