Build: Fix ConfigCoreIPC on Musca-B1
Musca-B1 requires the NO_SWAP upgrade strategy, which causes
a build failure with ConfigCoreIPC due to the faulty
configuration of compile time switches for the linker.

Change-Id: I56a1fd38aa30268993438efd2d6d33e8ee1b3e1f
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -215,7 +215,7 @@ function(set_up_secure_fw_build)
 	if (NOT DEFINED TFM_PSA_API)
 		message(FATAL_ERROR "Incomplete build configuration: TFM_PSA_API is undefined. ")
 	elseif (TFM_PSA_API)
-		embedded_set_target_link_defines(TARGET ${PROJECT_NAME} DEFINES "TFM_PSA_API")
+		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "TFM_PSA_API")
 	endif()
 
 	if(CORE_TEST)
