Build: A switch for selecting platform service
Switch 'TFM_PARTITION_PLATFORM' is added for selecting platform
service. Enabled by default and can be overridden by cmake command.

Change-Id: Ic2529b101292b8f81203da4a11815778194806f9
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -42,6 +42,10 @@ if (NOT DEFINED TFM_PARTITION_AUDIT_LOG)
 	message(FATAL_ERROR "Incomplete build configuration: TFM_PARTITION_AUDIT_LOG is undefined.")
 endif()
 
+if (NOT DEFINED TFM_PARTITION_PLATFORM)
+	message(FATAL_ERROR "Incomplete build configuration: TFM_PARTITION_PLATFORM is undefined.")
+endif()
+
 set(NS_APP_SRC "${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Config/RTX_Config.c"
 	"${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Source/rtx_lib.c"
 	"${APP_DIR}/main_ns.c"
@@ -49,13 +53,16 @@ set(NS_APP_SRC "${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Config/RTX_Config.c"
 	"${APP_DIR}/os_wrapper_rtx.c"
 	"${INTERFACE_DIR}/src/tfm_sst_api.c"
 	"${INTERFACE_DIR}/src/tfm_crypto_api.c"
-	"${INTERFACE_DIR}/src/tfm_platform_api.c"
 	"${INTERFACE_DIR}/src/tfm_initial_attestation_api.c"
 	"${INTERFACE_DIR}/src/tfm_ns_lock_rtx.c"
 	)
 
 if (TFM_PARTITION_AUDIT_LOG)
 	list(APPEND NS_APP_SRC "${INTERFACE_DIR}/src/tfm_audit_api.c")
+endif()
+
+if (TFM_PARTITION_PLATFORM)
+	list(APPEND NS_APP_SRC "${INTERFACE_DIR}/src/tfm_platform_api.c")
 endif()
 
 if (NOT DEFINED TFM_NS_CLIENT_IDENTIFICATION)
