--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -41,6 +41,7 @@
       "short_name": "TFM_SP_Platform",
       "manifest": "secure_fw/services/platform/manifest.yaml",
       "tfm_extensions": true,
+      "conditional": "TFM_PARTITION_PLATFORM",
       "version_major": 0,
       "version_minor": 1
     },
