Build: Move configurations into a specified directory
Configurations are increasing and cause root directory looks not very
clear. Move configurations into a specified directory. Related changes
in projects need to be made due to config file change. And create fake
config files with the same name under the root directory, link to the
config files under 'configs' to provide compatibility temporarily.

Change-Id: I420b7a567e96d6540b5cd9697b08575d89274fe4
Signed-off-by: Ken Liu <ken.liu@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -10,18 +10,18 @@ cmake_minimum_required(VERSION 3.7)
 #Tell cmake where our modules can be found
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/../cmake)
 
-#Include common stuff to control cmake.
-include("Common/BuildSys")
-
-#Start an embedded project.
-embedded_project_start(CONFIG "${CMAKE_CURRENT_LIST_DIR}/../ConfigDefault.cmake")
-project(tfm_ns LANGUAGES ASM C)
-embedded_project_fixup()
-
 set(APP_DIR ${CMAKE_CURRENT_LIST_DIR})
 get_filename_component(TFM_ROOT_DIR ${APP_DIR}/.. ABSOLUTE)
 set(INTERFACE_DIR ${TFM_ROOT_DIR}/interface)
 set(TEST_DIR ${TFM_ROOT_DIR}/test)
+
+#Include common stuff to control cmake.
+include("Common/BuildSys")
+
+#Start an embedded project.
+embedded_project_start(CONFIG "${TFM_ROOT_DIR}/configs/ConfigDefault.cmake")
+project(tfm_ns LANGUAGES ASM C)
+embedded_project_fixup()
 
 #Include BL2 bootloader related functions
 set(MCUBOOT_DIR "${TFM_ROOT_DIR}/bl2/ext/mcuboot")
