Build: Unify build artefacts naming
In case of NO_SWAP upgrade strategy the build artefacts
get a postfix (_0 or _1) to indicate which memory slot are
they intended. This patch remove the _0 postfix (but _1 still
exists) to be the same name of artefacts regardless the build
config.

Change-Id: I3a71c1212bd2f4120930e2cf033596b02c83f193
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -299,8 +299,7 @@ if (LINK_TO_BOTH_MEMORY_REGION)
 					 S_TARGET      tfm_s
 					 FULL_BIN      tfm_full
 					 SIGN_BIN      tfm_sign
-					 VENEER_NAME   s_veneers
-					 POSTFIX       "_0")
+					 VENEER_NAME   s_veneers)
 
 	#Link to secondary memory region(add extra linker flag)
 	set_up_app_build(NS_TARGET     ${PROJECT_NAME}
@@ -332,10 +331,6 @@ endif()
 #Finally let CMake system apply changes after the whole project is defined.
 if (TARGET ${PROJECT_NAME})
 	embedded_project_end(${PROJECT_NAME})
-endif()
-
-if (TARGET ${PROJECT_NAME}_0)
-	embedded_project_end(${PROJECT_NAME}_0)
 endif()
 
 if (TARGET ${PROJECT_NAME}_1)
