--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -327,8 +327,7 @@ endif()
 if (LINK_TO_BOTH_MEMORY_REGION)
 	#Link to primary memory region
 	set_up_secure_fw_build(S_TARGET      ${PROJECT_NAME}
-						   VENEER_NAME   s_veneers
-						   POSTFIX       "_0")
+						   VENEER_NAME   s_veneers)
 
 	#Link to secondary memory region(add extra linker flag)
 	set_up_secure_fw_build(S_TARGET      ${PROJECT_NAME}
@@ -344,10 +343,6 @@ endif()
 #Finally let CMake system apply changes after the whole project is defined.
 if (TARGET ${PROJECT_NAME})
 	embedded_project_end(${PROJECT_NAME})
-endif()
-
-if (TARGET ${PROJECT_NAME}_0)
-	embedded_project_end(${PROJECT_NAME}_0)
 endif()
 
 if (TARGET ${PROJECT_NAME}_1)
