Build: Generate service ID header file
According to PSA FF, the header file for service ID need be created by
tools:
- Add template file for the generated header file.
- The SID macro definitions derived from manifest files that map from
  RoT Service names with "_SID" postfix to Service IDs.
- The version macro definitions derived from manifest files that map
  from RoT Service names with "_VERSION" postfix to minor_version.
- Add the 'sid.h' in the generated file list.

Change-Id: If53d3db0048db5d643fa33067efdd8692b186d60
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -56,5 +56,10 @@
         "short_name": "tfm_secure_irq_handlers_ipc",
         "output": "secure_fw/core/ipc/tfm_secure_irq_handlers_ipc.inc"
     },
+    {
+        "name": "SID H file",
+        "short_name": "sid.h",
+        "output": "interface/include/psa_manifest/sid.h"
+    }
   ]
 }
