--- a/secure_fw/services/tfm_partition_list.inc.template
+++ b/secure_fw/services/tfm_partition_list.inc.template
@@ -22,11 +22,15 @@
     {% else %}
 #define TFM_PARTITION_{{manifest.manifest.name}}_IRQ_COUNT 0
     {% endif %}
-PARTITION_DECLARE({{manifest.manifest.name}}, 0
+PARTITION_DECLARE({{manifest.manifest.name}},
     {% if manifest.attr.tfm_partition_ipc %}
-    | SPM_PART_FLAG_IPC
+    SPM_PART_FLAG_IPC,
+    {% else %}
+    0,
     {% endif %}
-    , "{{manifest.manifest.type}}", {{manifest.manifest.name}}_ID, {{manifest.manifest.priority}});
+    "{{manifest.manifest.type}}",
+    {{manifest.manifest.name}}_ID,
+    {{manifest.manifest.priority}});
 PARTITION_ADD_INIT_FUNC({{manifest.manifest.name}}, {{manifest.manifest.entry_point}});
     {% if manifest.manifest.mmio_regions %}
         {% for region in manifest.manifest.mmio_regions %}
