Core: Remove tfm_spm_signal_defs.h
Remove 'tfm_spm_signal_defs.h' which used to include the service signal
value for SPM and add the generate manifest header file to the related
file directly.

Change-Id: I49e32e3053b6e73571db5b1f07149ab2a9087d22
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/services/tfm_service_list.inc.template
+++ b/secure_fw/services/tfm_service_list.inc.template
@@ -10,6 +10,10 @@
 #ifndef __TFM_SERVICE_LIST_INC__
 #define __TFM_SERVICE_LIST_INC__
 
+{% for header in utilities.manifest_header_list %}
+#include "{{header}}"
+{% endfor %}
+
 {% for manifest in manifests %}
     {% if manifest.attr.tfm_partition_ipc %}
         {% if manifest.manifest.services %}
