--- a/secure_fw/ns_callable/tfm_veneers.c.template
+++ b/secure_fw/ns_callable/tfm_veneers.c.template
@@ -32,7 +32,7 @@ psa_status_t {{sec_func.tfm_symbol}}(psa_invec *, size_t, psa_outvec *, size_t);
                                          size_t out_len) \
     { \
         TFM_CORE_IOVEC_SFN_REQUEST(partition_name##_ID, \
-                                   sfn_name, \
+                                   (void *) sfn_name, \
                                    in_vec, in_len, out_vec, out_len); \
     }
 
