Twincpu: Add preprocessor option and configuration TFM_MULTI_CORE_TOPOLOGY
Twincpu is a system that runs SPE and NSPE on two separate
CPU cores. It assumes secure and non-secure code to be built
independently with different CPU configurations.

Use preprocessor option TFM_MULTI_CORE_TOPOLOGY to skip unnecessary
operations in multi-core scenario.
Add configuration TFM_MULTI_CORE_TOPOLOGY to skip unnecessary
files, definitions or sections during building.

Change-Id: Ib94908c17d9ce80a33f0f1a33d9bd086bd16c751
Signed-off-by: David Hu <david.hu@arm.com>

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -28,7 +28,9 @@ MEMORY
 {
   FLASH   (rx)  : ORIGIN = S_CODE_START, LENGTH = S_CODE_SIZE
   RAM     (rwx) : ORIGIN = S_DATA_START, LENGTH = S_DATA_SIZE
+#if !TFM_MULTI_CORE_TOPOLOGY
   VENEERS (rx)  : ORIGIN = CMSE_VENEER_REGION_START, LENGTH = CMSE_VENEER_REGION_SIZE
+#endif
 }
 
 __heap_size__  = S_HEAP_SIZE;
@@ -550,6 +552,7 @@ SECTIONS
     Image$$ER_TFM_DATA$$Base = ADDR(.TFM_DATA);
     Image$$ER_TFM_DATA$$Limit = ADDR(.TFM_DATA) + SIZEOF(.TFM_DATA) + SIZEOF(.TFM_BSS);
 
+#if !TFM_MULTI_CORE_TOPOLOGY
     /*
      * Place the CMSE Veneers (containing the SG instruction) after the code, in a
      * separate 32 bytes aligned region so that the SAU can programmed to just set
@@ -562,6 +565,7 @@ SECTIONS
     } > VENEERS AT> VENEERS
     Load$$LR$$LR_VENEER$$Base = ADDR(.gnu.sgstubs);
     Load$$LR$$LR_VENEER$$Limit = ADDR(.gnu.sgstubs) + SIZEOF(.gnu.sgstubs);
+#endif
 
     Load$$LR$$LR_NS_PARTITION$$Base = NS_PARTITION_START;
 
