--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -268,6 +268,7 @@ LR_CODE S_CODE_START {
     ScatterAssert(ImageLimit(SRAM_WATERMARK) <= S_DATA_START + S_DATA_SIZE)
 }
 
+#if !TFM_MULTI_CORE_TOPOLOGY
 LR_VENEER CMSE_VENEER_REGION_START {
     /*
      * Place the CMSE Veneers (containing the SG instruction) in a separate
@@ -278,6 +279,7 @@ LR_VENEER CMSE_VENEER_REGION_START {
         *(Veneer$$CMSE)
     }
 }
+#endif
 
 LR_NS_PARTITION NS_PARTITION_START {
     /* Reserved place for NS application.
